<resources>
    <string name="app_name">EEPIS Library</string>
    <string name="cd_logo_login">Logo Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="bt_login">Login</string>
    <string name="error_login_failed">Login gagal, email atau password salah</string>
    <string name="error_input_email_validation">email tidak valid</string>
    <string name="error_input_email">email harus diisi</string>
    <string name="error_input_password">password harus diisi</string>
    <string name="login_message_auth">Mengautentikasi…</string>
    <string name="login_welcome_text">Selamat Datang Di Perpustakaan PENS</string>
    <string name="login_welcome_text_2">Silahkan Login Terlebih Dahulu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_buku">Buku</string>
    <string name="menu_pemesanan">Pemesanan Buku</string>
    <string name="menu_peminjaman">Peminjaman Buku</string>
    <string name="menu_riwayat">Riwayat Peminjaman Buku</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>
    <string name="system_error">Kesalahan sistem!</string>
    <string name="logo_pens">Logo PENS</string>
    <string name="expired_token_message">Sesi telah habis, silahkan login kembali</string>

    <string name="empty_riwayat_message">"Anda belum pernah meminjam buku"</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="tanggal_pinjam">Tanggal Pinjam</string>
    <string name="tanggal_kembali">Tanggal Kembali</string>
    <string name="gambar_buku">Gambar Buku</string>
    <string name="loading">Loading…</string>
    <string name="empty_pemesanan_message">Data pemesanan kosong. Klik tombol tambah untuk memesan buku</string>
    <string name="empty_peminjaman_message">Data peminjaman kosong. Silahkan pesan buku terlebih dahulu untuk meminjam buku</string>
    <string name="tambah">Tambah</string>
    <string name="cari">Cari</string>
    <string name="tidak_ada_buku">Tidak ada buku</string>
    <string name="ebook">Ebook</string>
    <string name="empty_ebook_message">Tidak ada Ebook</string>
    <string name="empty_buku_message">Tidak Ada Buku</string>
    <string name="pesan_buku">Pesan Buku</string>
    <string name="tidak_ada_ebook">Tidak Ada Ebook</string>
    <string name="choose_app">Pilih Aplikasi</string>
    <string name="tahun_terbit">Tahun Terbit</string>
    <string name="pengarang">Pengarang</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail_buku">Detail Buku</string>
    <string name="gambar_ebook">Gambar Ebook</string>
    <string name="baca_ebook">Baca Ebook</string>
    <string name="detail_ebook">Detail Ebook</string>
</resources>
