<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buku"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_buku" />
        <item
            android:id="@+id/nav_ebook"
            android:icon="@drawable/ic_baseline_description_24"
            android:title="@string/ebook" />
        <item
            android:id="@+id/nav_pemesanan"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_pemesanan" />
        <item
            android:id="@+id/nav_peminjaman"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="@string/menu_peminjaman" />
        <item
            android:id="@+id/nav_riwayat"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_riwayat" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_group_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>
