<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_buku">

    <fragment
        android:id="@+id/nav_buku"
        android:name="com.example.eepislibrary.activity.ui.buku.BukuFragment"
        android:label="@string/menu_buku"
        tools:layout="@layout/fragment_buku" />

    <fragment
        android:id="@+id/nav_ebook"
        android:name="com.example.eepislibrary.activity.ui.ebook.EbookFragment"
        android:label="@string/ebook"
        tools:layout="@layout/fragment_ebook" />

    <fragment
        android:id="@+id/nav_pemesanan"
        android:name="com.example.eepislibrary.activity.ui.pemesanan.PemesananFragment"
        android:label="@string/menu_pemesanan"
        tools:layout="@layout/fragment_pemesanan" />

    <fragment
        android:id="@+id/nav_peminjaman"
        android:name="com.example.eepislibrary.activity.ui.peminjaman.PeminjamanFragment"
        android:label="@string/menu_peminjaman"
        tools:layout="@layout/fragment_peminjaman" />

    <fragment
        android:id="@+id/nav_riwayat"
        android:name="com.example.eepislibrary.activity.ui.riwayat.RiwayatFragment"
        android:label="@string/menu_riwayat"
        tools:layout="@layout/fragment_riwayat" />

</navigation>