<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarStyle="outsideOverlay"
    android:fillViewport="true"
    android:id="@+id/root_login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="center">

        <ImageView android:src="@drawable/white_pens_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cd_logo_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/login_welcome_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/login_welcome_text_2"/>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            app:startIconDrawable="@drawable/ic_email_black_24dp"
            app:errorEnabled="true"
            app:errorTextColor="@color/red_danger"
            app:boxStrokeErrorColor="@color/red_danger"
            app:errorIconDrawable="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:autofillHints="email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:startIconDrawable="@drawable/ic_vpn_key_black_24dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextColor="@color/red_danger"
            app:boxStrokeErrorColor="@color/red_danger"
            app:errorIconDrawable="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:autofillHints="password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            android:text="@string/bt_login" />

<!--        <TextView android:id="@+id/link_sign_up"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="24dp"-->
<!--            android:text="No account yet? Create one"-->
<!--            android:gravity="center"-->
<!--            android:textSize="16dip"/>-->

    </LinearLayout>
</ScrollView>