<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.detail_ebook.DetailEbookActivity"
    android:id="@+id/view_detail_ebook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_ebook_cover_ebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="750dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/gambar_ebook" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_ebook_judul_ebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_ebook_sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/pengarang"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#e6e6e6" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_ebook_pengarang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:padding="5dp"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#e6e6e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/tahun_terbit"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#e6e6e6" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_ebook_tahun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:padding="5dp"
                android:textSize="16sp"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_ebook_btn_baca_ebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:text="@string/baca_ebook"
            android:textColor="@color/white"
            android:background="@color/color_primary"/>

    </LinearLayout>

</ScrollView>